--- a/public/css/header.css
+++ b/public/css/header.css
@@ -19,6 +19,7 @@
 
 .nav-li{
     margin-bottom: -13px;
+    float: right;
 }
 
 .nav-li ul{
@@ -56,7 +57,6 @@
     margin-right: 5px;
 }
 
-/* leo theme */
 .hover-btn1:hover{
     color: rgb(102, 115, 238);
 }
@@ -116,10 +116,10 @@
 .nav-search-btn{
     padding-right: 22px;
     padding-left: 22px;
-    margin-left: -22px;
+    /* margin-left: -22px; */
     background-color: rgb(84,174,63);
     color: white;
-    margin-left: 20px;
+    /* margin-left: 20px; */
 }
 
 .nav-search-btn:hover{
