--- a/public/assets/front/css/merchant.css
+++ b/public/assets/front/css/merchant.css
@@ -11,7 +11,7 @@
 .merchant-profile-img img{
     width: 50px;
     border-radius: 50%;
-}
+}   
 
 .merchant-profile-img i{
     font-size:46px;
@@ -19,7 +19,7 @@
 }
 
 .merchant-details{
-    border-left: 2px solid gray;
+    /* border-left: 2px solid gray; */
     padding: 10px 0px 10px 40px;
 }
 
