started user profile settings

--- a/public/assets/front/css/homestay.css
+++ b/public/assets/front/css/homestay.css
@@ -234,3 +234,14 @@
     font-weight: 700;
     margin: 10px 0px;
 }
+
+.room-img img{
+    /* height: 320px; */
+    max-width: 100%;
+    width: auto;
+    max-height: 450px;
+}
+
+.room-img{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
