added new UI for my account

--- a/public/assets/front/css/blogs.css
+++ b/public/assets/front/css/blogs.css
@@ -120,6 +120,14 @@
     font-family: 'Noto Sans', sans-serif;
 }
 
+.create-blog-widget{
+    font-family: 'Noto Sans', sans-serif;
+}
+
+.create-blog-widget h3{
+    
+}
+
 
 /* .post-category-widget */
 .widget-title{
