blog crud on progress

--- a/public/assets/front/css/customer-bookmarks.css
+++ b/public/assets/front/css/customer-bookmarks.css
@@ -3,7 +3,7 @@
 }
 
 .customer-bookings-title{    
-    border-bottom: 2px solid gray;
+    /* border-bottom: 2px solid gray; */
     margin-bottom: 30px;
 }
 
