--- a/public/assets/front/css/footer.css
+++ b/public/assets/front/css/footer.css
@@ -1,7 +1,7 @@
 /*     footer    */
 footer{
     font-family: 'Noto Sans', sans-serif;
-    border-top: 1px solid rgba(175, 170, 170, 0.288);
+    /* border-top: 1px solid rgba(175, 170, 170, 0.288); */
     padding-top: 10px;
 }
 
